Bug 33601. Force REFRAME style hints if views might need to be created in response to opacity or background-attachment style changes. r=dbaron,sr=waterson